demos/mtls/foo-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "foo-mtls"
  namespace: "foo"
spec:
  mtls:
    mode: STRICT
